Bug 1771500 Show all available printers; r=stransky

Allow to continue enumeration of the printers for all protocols
(ie. ipp and ipps).

Following advice given by cups guys to use cupsGetDests2 to avoid duplicates of printers in the list: https://bugzilla.redhat.com/show_bug.cgi?id=1983403#c18

Differential Revision: https://phabricator.services.mozilla.com/D147508